[package]
name = "haku-server"
version = "0.4.3"
authors = ["Arco Hsieh <yiyezhihen@gmail.com>", "Rosehsu <rosehsu47@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Email sender system in WoWFood"
homepage = "https://github.com/WF-Engineering/haku"
repository = "https://github.com/WF-Engineering/haku"

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7.0"
envy = "0.4"
futures-util = "0.3"
lapin = "1.2.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio-amqp = "0.1.3"

# wowfood dependencies
sendinblue = "0.2.1"

[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}