[package]
name = "haku-client"
version = "0.1.0"
authors = ["Arco Hsieh <yiyezhihen@gmail.com>", "Rosehsu <rosehsu47@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Email sender system in WoWFood"
homepage = "https://github.com/WF-Engineering/haku"
repository = "https://github.com/WF-Engineering/haku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
chrono = { version = "0.4.10", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
strum = "0.18.0"
strum_macros = "0.18.0"